--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.5",
     "reactstrap": "^9.1.2",
     "styled-components": "^5.3.3",
